--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">离线全唐诗</string>
     <string name="tip"><![CDATA[
-1、学习界面的使用：先点击诗中出现的<font color=black><b>字、词汇、作者</b></font>，再点击<font color=black><b>添加按钮</b></font>保存到标签，然后点击<font color=black><b>标签</b></font>开始搜索。<br><br>
-2、在学习的搜索结果界面，点击上方的标题文字可以切换搜索引擎。<br><br>
-3、诗界面底部的<font color="#6666cc"><b>蓝色按钮条</b></font>可以向上拖动，拖动后可以进行更多操作。<br><br>
+1、诗界面底部的<font color="#6666cc"><b>蓝色按钮条</b></font>可以向上拖动，拖动后可以进行更多操作。<br><br>
+2、学习界面的使用：先点击诗中出现的<font color=black><b>字、词汇、作者</b></font>，再点击<font color=black><b>添加按钮</b></font>保存到标签，然后点击<font color=black><b>标签</b></font>开始搜索。<br><br>
+3、在学习的搜索结果界面：浏览<u>百度汉语</u>页面时，在菜单里可以提取通假字并跳转；点击上方标题的白色文字可以切换搜索引擎。<br><br>
 4、点击诗界面左上的数字编号，会把诗复制到剪贴板。<br><br>
 5、如果设备性能较差，可以把本应用加入系统后台保护，并在退出时使用Home键切出应用。这样在切入时更流畅。]]></string>
 
