--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,16 @@
 <resources>
     <string name="app_name">离线全唐诗</string>
     <string name="tip"><![CDATA[
-一、诗界面底部的<font color="#6666cc"><b>蓝色按钮条</b></font>可以向上拖动，拖动后可以进行更多操作。<br><br>
+一、在诗界面：<br>
+1、底部的<font color="#6666cc"><b>蓝色按钮条</b></font>可以向上拖动，拖动后可以进行更多操作。<br>
+2、点击左上的数字编号，会把诗复制到剪贴板。<br><br>
 二、在学习界面：<br>
 1、先点击诗中出现的<font color=black><b>字、词汇、作者</b></font>，再点击<font color=black><b>添加</b></font>按钮保存到标签，然后点击<font color=black><b>标签</b></font>开始搜索。<br>
 2、长按<font color=black><b>清空</b></font>按钮，会清空所有标签。<br><br>
 三、在学习的搜索结果界面：<br>
 1、点击上方标题的白色文字可以切换搜索引擎。<br>
 2、浏览<u>百度汉语</u>页面时，在右上菜单里可以提取通假字并跳转。<br><br>
-四、点击诗界面左上的数字编号，会把诗复制到剪贴板。<br><br>
-五、如果设备性能较差，可以把本应用加入系统后台保护，并在退出时使用Home键切出应用。这样在切入时更流畅。<br>]]></string>
+四、如果设备性能较差，可以把本应用加入系统后台保护，并在退出时使用Home键切出应用。这样在切入时更流畅。<br>]]></string>
 
     <string name="about"><![CDATA[下载最新版、访问源代码：<br><a href="https://github.com/animalize/QuanTangshi">https://github.com/animalize/QuanTangshi</a><br><br>使用了jackeyGao网友整理的全唐诗数据库（原始数据为繁体字）：<br><a href="https://github.com/jackeyGao/chinese-poetry">https://github.com/jackeyGao/chinese-poetry</a><br><br>参考了OpenCC提供的繁体->简体转换表：<br><a href="https://github.com/BYVoid/OpenCC">https://github.com/BYVoid/OpenCC</a>]]></string>
 </resources>
