--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,13 @@
 2、浏览<u>百度汉语</u>页面时，在右上菜单里可以提取通假字并跳转。<br><br>
 四、建议把本应用加入系统后台保护，并在退出时使用Home键切出应用。这样在切入时更流畅，并且能保存一些使用状态。<br>]]></string>
 
-    <string name="about"><![CDATA[下载最新版、访问源代码：<br><a href="https://github.com/animalize/QuanTangshi">https://github.com/animalize/QuanTangshi</a><br><br>使用了jackeyGao网友整理的全唐诗数据库（原始数据为繁体字）：<br><a href="https://github.com/jackeyGao/chinese-poetry">https://github.com/jackeyGao/chinese-poetry</a><br><br>参考了OpenCC提供的繁体->简体转换表：<br><a href="https://github.com/BYVoid/OpenCC">https://github.com/BYVoid/OpenCC</a>]]></string>
+    <string name="about"><![CDATA[
+下载最新版、访问源代码：<br>
+<a href="https://github.com/animalize/QuanTangshi">https://github.com/animalize/QuanTangshi</a><br><br>
+使用了jackeyGao网友整理的全唐诗数据库（原始数据为繁体字）：<br>
+<a href="https://github.com/jackeyGao/chinese-poetry">https://github.com/jackeyGao/chinese-poetry</a><br><br>
+这个数据库质量很高，但也有个别错字，恰好能让读者对字、词保持锐敏。以下是勘误记录：<br>
+<a href="https://github.com/animalize/chinese-poetry/commits/master">https://github.com/animalize/chinese-poetry/commits/master</a><br><br>
+参考了OpenCC提供的繁体->简体转换表：<br>
+<a href="https://github.com/BYVoid/OpenCC">https://github.com/BYVoid/OpenCC</a>]]></string>
 </resources>
